k8s-objects/blue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: blue
  name: blue
spec:
  containers:
  - image: subhajitsaha89/nginx-blue:latest
    name: blue
    resources: {}
  imagePullSecrets:
  - name: regcred
