k8s-objects/red-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: red
  name: red
spec:
  containers:
  - image: subhajitsaha89/nginx-red:latest
    name: red
    resources: {}
  imagePullSecrets:
  - name: regcred
