k8s-objects/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: blue-svc
  name: blue-svc
spec:
  ports:
  - name: 80-8080
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: blue
  type: ClusterIP
status:
  loadBalancer: {}
