k8s-objects/red-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: red-svc
  name: red-svc
spec:
  ports:
  - name: 80-8080
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: red
  type: ClusterIP
status:
  loadBalancer: {}
