k8s-objects/ingress-blue-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-app-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: blue-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: red-svc
                port:
                  number: 8080
