k8s-objects/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: blue-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-svc
                port:
                  number: 8080
